# tepegoz

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/tepegoz/: Cargo.toml  build.rs
crates/tepegoz-agent/: Cargo.toml
crates/tepegoz-agent/src/: lib.rs  main.rs
crates/tepegoz-agent/tests/: agent_handshake.rs
crates/tepegoz-core/: Cargo.toml
crates/tepegoz-core/src/: agent.rs  client.rs  config.rs  daemon.rs  lib.rs  remote_pane.rs  state.rs
crates/tepegoz-core/tests/: daemon_persistence.rs  desync_repro.rs  docker_scope.rs  fleet_scope.rs  pane_stack.rs  pane_unsubscribe.rs  ports_processes_e2e.rs  ports_scope.rs  processes_scope.rs  pty_persistence.rs  remote_docker_subscription_roundtrip.rs  remote_pane.rs  remote_probes_subscription_roundtrip.rs  vim_preservation.rs
crates/tepegoz-docker/: Cargo.toml
crates/tepegoz-docker/src/: lib.rs  socket.rs
crates/tepegoz-probe/: Cargo.toml
crates/tepegoz-probe/src/: common.rs  lib.rs  linux.rs  macos.rs  ports.rs  processes.rs
crates/tepegoz-proto/: Cargo.toml  build.rs
crates/tepegoz-proto/src/: codec.rs  lib.rs  socket.rs
crates/tepegoz-pty/: Cargo.toml
crates/tepegoz-pty/src/: lib.rs
crates/tepegoz-record/: Cargo.toml
crates/tepegoz-record/src/: lib.rs
crates/tepegoz-scan/: Cargo.toml
crates/tepegoz-scan/src/: lib.rs
crates/tepegoz-ssh/: Cargo.toml
crates/tepegoz-ssh/src/: config.rs  deploy.rs  error.rs  known_hosts.rs  lib.rs  paths.rs  session.rs
crates/tepegoz-ssh/tests/: remote_agent_deploy.rs  ssh_smoke.rs
crates/tepegoz-transport/: Cargo.toml
crates/tepegoz-transport/src/: lib.rs
crates/tepegoz-tui/: Cargo.toml
crates/tepegoz-tui/src/: app.rs  config.rs  help.rs  host_picker.rs  input.rs  lib.rs  mouse.rs  net.rs  pty_tile.rs  session.rs  terminal.rs  tile.rs  toast.rs  tracing_setup.rs  ui.rs
crates/tepegoz-tui/src/scope/: docker.rs  fleet.rs  mod.rs  placeholder.rs  ports.rs
crates/tepegoz/src/: agents.rs  main.rs
docs/: ARCHITECTURE.md  DECISIONS.md  HANDOFF.md  ISSUES.md  OPERATIONS.md  ROADMAP.md  STATUS.md  V2_VISION.md
xtask/: Cargo.toml
xtask/src/: build_agents.rs  build_release.rs  demo.rs  demo_phase_6.rs  main.rs  preflight.rs
