[package]
name = "tepegoz-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tepegöz remote agent logic (invoked over SSH stdio)."

[[bin]]
name = "tepegoz-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
tepegoz-proto = { workspace = true }
tepegoz-docker = { workspace = true }
# Phase 6 Slice 6d-ii: Ports + Processes probes via the same
# implementation the daemon uses for local-target subscriptions.
# Single source of truth for probe behavior on the agent side.
tepegoz-probe = { workspace = true }
