[package]
name = "tepegoz-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tepegöz daemon engine: state store, event bus, command dispatch."

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
tepegoz-proto = { workspace = true }
tepegoz-pty = { workspace = true }
tepegoz-docker = { workspace = true }

[dev-dependencies]
tempfile = "3"
vt100 = "0.16"
