[package]
name = "tepegoz-probe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform probes for processes, sockets, and system stats."

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
