[package]
name = "tepegoz-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PTY session manager — daemon-owned ptys with ring buffer and subscriber fanout."

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
portable-pty = "0.8"
bytes = "1"
tepegoz-proto = { workspace = true }
