[package]
name = "tepegoz-scan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Port scanner for Tepegöz (TCP-connect in v1; SYN in v1.1)."

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
