[package]
name = "tepegoz-ssh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SSH transport (russh client) with host discovery, auth chain, and host-key TOFU for Tepegöz."

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tepegoz-proto = { workspace = true }

# SSH client + ssh_config parsing. `russh-config` is authored alongside
# russh so versioning tracks cleanly; `ssh2-config` is the alternative
# and can be swapped in with minimal surface change if russh-config ever
# misses a field we need.
#
# Crypto backend: `ring` (default is `aws-lc-rs`, which needs a full C
# toolchain with assembler support — cross-building from Linux to
# x86_64-apple-darwin via cargo-zigbuild fails at the aws-lc-sys link
# step). `ring` is mostly-pure-Rust with well-tested cross-compile
# support and covers every algorithm russh negotiates against modern
# OpenSSH servers (ed25519, ecdsa-p256/384/521, RSA-with-SHA-256+).
russh = { version = "0.60", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-config = "0.58"

# OS-split config / data dirs. `dirs::config_dir()` maps to
# `$XDG_CONFIG_HOME` on Linux and `~/Library/Application Support` on
# macOS per ARCHITECTURE §5; same shape for `data_dir()`.
dirs = "6"

# Tepegöz-local `config.toml` override for the SSH host list. Only the
# `[ssh]` table is deserialized here; other tepegoz config is owned by
# other crates.
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Phase 6 Slice 6b — content-hash verification of deployed agent
# binaries. `sha2` hashes the embedded bytes locally; the remote hash
# comes from `sha256sum -b` (Linux) or `shasum -a 256 -b` (macOS),
# picked per OS detected via `uname -sm` at deploy time. `hex`
# formats the 32-byte digest for user-visible output + error
# diagnostics.
sha2 = { workspace = true }
hex = { workspace = true }
# Phase 6 Slice 6b — the handshake round-trip at the end of a deploy
# serializes `Payload::AgentHandshake` via tepegoz-proto, but the russh
# channel's write path takes a `CryptoVec` instead of `AsyncWrite`. We
# call `rkyv::to_bytes` directly for the outbound envelope and push the
# bytes through `channel.data(...)` — the only cross-crate writer
# path that needs the rkyv dep here.
rkyv = "0.8"

[dev-dependencies]
tempfile = "3"
# Opt-in integration test `remote_agent_deploy.rs` drives wire v10
# envelopes via tepegoz-proto's PROTOCOL_VERSION constant.
tepegoz-proto = { workspace = true }
