[package]
name = "tepegoz-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tepegöz TUI client: god-view tiled layout over a daemon-owned pty."

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
crossterm = "0.28"
ratatui = "0.30"
vt100 = "0.16"
tepegoz-proto = { workspace = true }
